--- a/Projeto1-ListaDeTarefas/style.css
+++ b/Projeto1-ListaDeTarefas/style.css
@@ -36,6 +36,9 @@ body{
 }
 
 #botao{
+    position: absolute;
+    top: 85px;
+    left: 375px;
     width: 10%;
     height: 35px;
     border-radius: 10px;
@@ -61,4 +64,11 @@ body{
     border-top: 0px;
     border-radius: 0px 0px 25px 25px;
     color: white;
+}
+
+#tarefas p{
+    font-family: "Bebas Neue";
+    font-size: 1.8em;
+    text-align: left;
+    padding: 10px;
 }
